# sdcard_manager

./: CMakeLists.txt  main.c  sdcard_util.c  sdcard_util.h  test.c
include/: sdcard_util.h
src/: sdcard_util.c
test/: test.c
unitest/: test.c  test_sys.c
